Add crate textures, fix crate gen BPT